--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -323,264 +323,122 @@ a
   z-index: 6
 
 #eventwindow
-  //display: none
+  display: flex
   position: fixed
+  flex-direction: row
+  flex-wrap: nowrap
+  align-content: flex-start
+  justify-content: center
+  align-items: flex-start
+  
   transform: translate(-50%, -50%)
   top: 55%
   left: 50%
   width: 45%
-  padding-top: 30%
+  padding: 3vw 0
   background-color: #F5FBFE
   border-radius: 3vw
   border: 5px solid rgba(58, 237, 194, 0.5)
   box-shadow: 10px 10px 25px 5px #00000026
   z-index: 7
   
-  *
-    font-color: #000000
-  
-  p
-    font-size: 1vw
-
-  
-  #description
+  #eventwindow-bg
     position: absolute
-    left: 3.5vw
-    top: 3.5vw
-    height: 65%
-    width: 60%
     
-    p
-      font-size: 2.5vw
-      color: #000000
-      font-weight: 600
-    
-    #subtitle
-      margin: 0.7vw 0 0 0
-      font-size: 1.3vw
-      color: rgba(61, 201, 167, 1)
-    
-    #keywords
-      display: flex
-      flex-direction: row
-      margin: 1vw 0 0 0
-      *
-        font-size: 1.5vw
-        color: purple
-        
-    #detail
-      font-size: 1.3vw
-      color: #000000
-      margin: 1vw 0 0 0
-      line-height: 1.7vw
-      height: 60%
-      overflow: scroll
-      overflow-x: hidden
-
-
-  #member
-    position: absolute
-    transform: translate(0, -100%)
+  #eventwindow-left
     display: flex
-    flex-direction: row
-    align-itemS: center
-    bottom: -1vw
+    flex-direction: column
+    flex-wrap: nowrap
+    justify-content: flex-start
+    align-items: flex-start
+    
     width: 70%
-    height: 3vw
-    left: 3.3vw
     
-    *
-      //position: relative
-      margin: 0 0.7vw 0 0
-    
-    a
-      margin: 0
-    p
-      font-size: 1vw
-      vertical-align: middle
-      margin: 0
-      padding: 1vw 0
-      
-    #bar
-      width: 0.2vw
-      height: 3vw
-      //transform: translate(0, -50%)
-      //top: 55%
-      background-color: #B0B0B0
-      
-    .member
-      height: 3vw
-      width: 3vw
-      border-radius: 50%
-      background-color: #E0E0E0
-    .participant
-      border: var(--color-main) solid 0.2vw
-
-    #organizer
-      border: #75E1C7 solid 0.2vw
-
-      
-  #operatebg
-    background-color: rgba(58, 237, 194, 0.5)
-    position: absolute
-    right: -2px
-    bottom: -2px
-    width: 32%
-    height: 20%
-    border-radius: 5vw 0 3vw 0
-  
-  #exitbtn1
-    transform: translate(-50%, 0)
-    top: 2vw
-    right: -5vw
-    width: 1.5vw
-    height: auto
-  
-  #eventoperate
-    position: absolute
-    transform: translate(0, -50%)
-    height: 100%
-    width: 20%
-    top: 50%
-    right: 3vw
-    *
-      position: absolute
-
-    #flag
-      display: none
-      transform: translate(-50%, 0)
-      top: 0
-      left: 50%
-      width: 3vw
-      height: auto
-      #flag-y
-        display: none
-        width: 100%
-        height: auto
-        box-shadow: 10px 10px 25px 5px #00000026
-        
-      #flag-n
-        display: block
-        width: 100%
-        height: auto
-        box-shadow: 10px 10px 25px 5px #00000026
-      
-    #date
-      transform: translate(-50%, -50%)
-      top: 6vw
-      left: 70%
-      width: 10vw
-      opacity: 0.8
-      font-size: 1vw
-
-    a
-      transform: translate(-50%, -50%)
-      left: 50%
-      #organizerpic
-        transform: translate(-50%, -50%)
-        height: 6vw
-        width: 6vw
-        top: 10.5vw
-        left: 50%
-        border-radius: 3vw
-        background-color: #C4C4C4
-        
-      p
-        transform: translate(-50%, -50%)
-        top: 14.7vw
-        left: 50%
-        font-size: 1.5vw
-        color: black
-        width: 5vw
-    
-    a.login-redirect
-      width: 100%
-      height: 15%
-      transform: translate(-50%, 0)
-      bottom: 0
-      left: 50%
+    #description
       display: flex
-      flex-direction: row
-      z-index: 1
-
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: flex-start;
+      justify-content: flex-start;
+      align-items: flex-start;
+    
+    #description-top
+      display: flex
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-content: flex-start;
+      justify-content: flex-start;
+      align-items: center;
+  
+    #eventmsgregion
+      display: flex
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: center;
+      align-items: flex-start;
+      justify-content: flex-start;
       
-    #likebutton
-      left: 1vw
-      bottom: 1vw
-      height: 3vw
-      width: 3vw
-      background-image: url('../file/like-n.png')
-      background-repeat: no-repeat
-      background-size: contain
-      form
-        button
-          background: Transparent
-          border: none
-          width: 3vw
-          height: 3vw
-        button:hover
-          cursor: pointer
-    
-      #like-y
-        display: none
-        width: 100%
-
-      #like-n
-        display: block
-        width: 100%
-    
-    #applybutton
-      right: 0.5vw
-      bottom: 1vw
-      height: 3vw
-      width: 3vw
-
-      #apply-y
-        display: block
-        width: 100%
+      #eventmsg-board
+        display: flex
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-content: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         
-      #apply-n
-        display: none
-        width: 100%
-    #applybutton:hover
-      cursor: pointer
-
-  #sent
-    position: absolute
-    //transform: translate(-50%, -50%)
-    display: block
-    top: -6px
-    left: -6px
-    right: -6px
-    bottom: -6px
-    width: auto
-    height: auto
-    border-radius: 3vw
-    opacity: 0
-    z-index: -1
-    backdrop-filter: blur(5px) contrast(40%) saturate(40%) brightness(70%)
-    -webkit-backdrop-filter: blur(5px) contrast(40%) saturate(40%) brightness(70%)
-
-    #mailicon
-      position: absolute
-      transform: translate(-50%, -100%)
-      height: 40%
-      width: auto
-      top: 65%
-      left: 50%
+    #eventmsg-sender
+      display: flex
+      flex-direction: row;
+      flex-wrap: nowrap;
+      align-items: center;
+      justify-content: flex-start;
+  
+  #eventwindow-right
+    display: flex
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: flex-end;
+    justify-content: space-between;
     
-    p
-      position: absolute
-      transform: translate(-50%, 0)
-      font-size: 4vw
-      text-align: center
-      bottom: 20%
-      left: 50%
-      width: 100%
-      opacity: 1
-      color: white
+    width: 10%
+    
+    #eventoperate
+      display: flex
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: center;
+      align-items: center;
+      justify-content: flex-start;
       
+      #exitbtn1
+        width: 1.5vw
+        height: 1.5vw
       
+      #member
+        display: flex
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        
+      #likebutton
+        width: 1.5vw
+        height: 1.5vw
+        
+        button
+          width: 100%
+          height: 100%
+      
+  
+  #senderpic
+    width: 3vw
+    height: 3vw
+  .member
+    width: 3vw
+    height: 3vw
+  
+
 #eventcreatewindow
   //display: none
   position: fixed
