add filter order event support

--- a/templates/event_detail.pug
+++ b/templates/event_detail.pug
@@ -81,6 +81,8 @@
 
 
 {% if event_detail.host %}
+{% load sass_tags %}
+link(href="{% sass_src 'sass/event_detail.sass' %}",rel="stylesheet",type="text/css")
 #eventwindow
   #eventwindow-bg
     #bgpics
