--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -229,7 +229,7 @@ a
             margin: 0 0.5vw
             
             
-            #notion-righttop
+            #notice-righttop
               display: flex
               flex-direction: row
               flex-wrap: nowrap
@@ -259,7 +259,7 @@ a
                 text-overflow: ellipsis
                 
               
-            #notion-rightbottom
+            #notice-rightbottom
               #notice-date
                 font-size: 0.85vw
                 color: #777777
