fix not login event detail page error

--- a/templates/event_detail.pug
+++ b/templates/event_detail.pug
@@ -128,11 +128,16 @@ link(href="{% sass_src 'sass/event_detail.sass' %}",rel="stylesheet",type="text/
         {% else %}
         img#userpic
         {% endif %}
+        {% if request.user.is_authenticated %}
         form(action="{% url 'comment' event_detail.pk request.user.userextend.pk %}", method="POST") 
           {% csrf_token %}
           input#eventmsg-insert(type="text", name='text', placeholder="傳送訊息...")
           input#eventmsg-btn(type="submit")
-    
+        {% else %}
+        a(href="{% url 'login' %}")
+          input#eventmsg-insert(type="text", name='text', placeholder="傳送訊息...")
+          input#eventmsg-btn(type="submit")
+        {% endif %}
   
   #eventwindow-right
     #joinevent-btn
