--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -328,24 +328,20 @@ a
   flex-direction: row
   flex-wrap: nowrap
   align-content: flex-start
-  justify-content: center
+  justify-content: space-between
   align-items: flex-start
   
   transform: translate(-50%, -50%)
-  top: 55%
+  top: 50%
   left: 50%
-  width: 45%
-  padding: 3vw 0
+  width: 37%
+  padding: 5vw 2vw 1.5vw 2vw
   background-color: #F5FBFE
   border-radius: 3vw
   border: 5px solid rgba(58, 237, 194, 0.5)
   box-shadow: 10px 10px 25px 5px #00000026
   z-index: 7
   
-  #eventwindow-bg
-    position: absolute
-    z-index: -1
-    opacity: 0.2
     
   #eventwindow-left
     display: flex
@@ -354,7 +350,33 @@ a
     justify-content: flex-start
     align-items: flex-start
     
-    width: 70%
+    width: 85%
+    
+    
+    #eventwindow-bg
+      position: absolute
+      top: 2vw
+      left: 2.5vw
+      height: 7.5vw
+      width: 7.5vw
+      z-index: -1
+      opacity: 1
+      
+      #eventpic
+        height: 100%
+        width: 100%
+        
+        img
+          height: 100%
+          width: 100%
+          border-radius: 1vw
+        p
+          font-size: 1vw
+          line-height: 8vw
+          background-color: #EFFFFB
+          
+    
+    
     
     #description
       display: flex
@@ -362,28 +384,39 @@ a
       flex-wrap: nowrap;
       align-content: flex-start;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: flex-start
     
     #description-top
       display: flex
       flex-direction: row;
       flex-wrap: wrap;
       align-content: flex-start;
-      justify-content: flex-start;
+      justify-content: space-between
       align-items: flex-end
+      width: 23vw
+      margin-left: 9vw
       
       #event-title
-        font-size: 2.5vw
+        font-size: 2vw
         font-weight: 900
         
       #event-date
         font-size: 1vw
         color: #444444
+        margin: 0
         
     #event-subtitle
-      font-size: 1.3vw
+      font-size: 1vw
       color: #3DC9A7
-    
+      margin: 0.3vw 0 0 9vw
+      
+    #event-detail
+      font-size: 1.2vw
+      min-height: 3vw
+      max-height: 4.5vw
+      margin: 2.2vw 0 0 1vw
+      
+      overflow: scroll
     
     
     #eventmsgregion
@@ -394,9 +427,20 @@ a
       align-items: flex-start;
       justify-content: flex-start;
       
-      width: 100%
-      height: 20%
+      width: 95%
+      height: 15vw
+      background-color: #EFFFFB
+      border-radius: 1.5vw
+      padding: 0.5vw
       
+      margin: 0.5vw 0 0 0
+      
+      #msgtitle
+        //position: absolute
+        font-size: 1.3vw
+        padding: 0 0 0.5vw 0.7vw
+        font-weight: 900
+        
       #eventmsg-board
         display: flex
         flex-direction: column;
@@ -405,22 +449,40 @@ a
         justify-content: flex-start;
         align-items: flex-start;
         
-        width: 100%
-        height: 20%
         overflow: scroll
         
+        .eventmsg:hover
+          background-color: #EFFFFB
         .eventmsg
           display: flex
           flex-direction: row;
           flex-wrap: nowrap;
           align-items: center;
+          width: 28.5vw
+          margin: 0 0 0.4vw 0
+          border-radius: 0.5vw
+          background-color: #F8FFFD
+          padding: 0.5vw
+          
+          a
+            margin: 0
+          
+          .sender
+            width: 2.5vw
+            height: 2.5vw
+            border-radius: 50%
+            background-color: white
           
           #eventmsg-right
             display: flex
             flex-direction: column;
             flex-wrap: nowrap;
-            justify-content: flex-start;
+            justify-content: space-between
             align-items: flex-start;
+            width: 100%
+            min-height: 2.5vw
+            margin-left: 1vw
+            
             
             #eventmsg-righttop
               display: flex
@@ -429,6 +491,22 @@ a
               align-content: center;
               align-items: center;
               justify-content: space-between;
+              width: 100%
+              
+              
+              #eventmsg-sendername
+                font-size: 1.05vw
+                width: 4vw
+                font-weight: 900
+              #event-date
+                font-size: 0.7vw
+                width: 15vw
+                color: #666666
+                text-align: right
+                
+            #eventmsgtext
+              font-size: 1vw
+              color: #444444
         
     #eventmsg-sender
       display: flex
@@ -436,13 +514,32 @@ a
       flex-wrap: nowrap;
       align-items: center;
       justify-content: flex-start;
+      
+      #senderpic
+        width: 3vw
+        height: 3vw
+        border-radius: 50%
+        background-color: #EEEEEE
+        
+      form
+        display: flex
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-content: center;
+        align-items: center;
+        justify-content: space-around;
+        margin: 1vw
+        
+        #eventmsg-insert
+          outline: none
+      
   
   #eventwindow-right
     display: flex
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
     align-content: center;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-between;
     
     width: 10%
@@ -465,6 +562,9 @@ a
         flex-wrap: nowrap;
         justify-content: flex-start;
         align-items: center;
+        .member
+          width: 3vw
+          height: 3vw
         
       #likebutton
         width: 1.5vw
@@ -475,12 +575,6 @@ a
           height: 100%
       
   
-  #senderpic
-    width: 3vw
-    height: 3vw
-  .member
-    width: 3vw
-    height: 3vw
   
 
 #eventcreatewindow
