--- a/templates/event_detail.pug
+++ b/templates/event_detail.pug
@@ -148,10 +148,11 @@ link(href="{% sass_src 'sass/event_detail.sass' %}",rel="stylesheet",type="text/
       a
         img#exitbtn1(src="{% static 'file/exiticon.png' %}")
         
+      a(href="{% url 'profile' id=event_detail.host.pk %}")
+        img#organizer.member(src='{{ event_detail.host.img.url }}')
+      #bar
       #member
-        a(href="{% url 'profile' id=event_detail.host.pk %}")
-          img#organizer.member(src='{{ event_detail.host.img.url }}')
-        #bar
+        
         
         {% for participant in event_detail.participants.all %}
         a(href="{% url 'profile' id=participant.pk %}")
@@ -162,20 +163,19 @@ link(href="{% sass_src 'sass/event_detail.sass' %}",rel="stylesheet",type="text/
         a(href="{% url 'profile' id=interested_user.pk %}")
           img.member.interested(src='{{ interested_user.img.url }}')
         {% endfor %}
-        
       {% if request.user.is_authenticated %}
-
+      
       {% if event_detail in request.user.userextend.event_like.all %}
-      #likebutton(style="background-image: url('/static/file/like-y.png')")
+      #likebutton(style="background-image: url('/static/file/like-bg-y.png')")
         form(action="{% url 'like' event_detail.pk %}", method="POST")
           {% csrf_token %}
-          button(type="image", src="{% static 'file/like-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
+          button(type="image", src="{% static 'file/like-bg-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
             span#like-img
       {% else %}
-      #likebutton(style="background-image: url('/static/file/like-n.png')")
+      #likebutton(style="background-image: url('/static/file/like-bg-n.png')")
         form(action="{% url 'like' event_detail.pk %}", method="POST")
           {% csrf_token %}
-          button(type="image", src="{% static 'file/like-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
+          button(type="image", src="{% static 'file/like-bg-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
             span#like-img
       {% endif %}
         
