--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -98,8 +98,8 @@ a
           width: 13vw
           height: 13vw
           border-radius: 50%
-          border: 3px
-          border-color: pink
+          border: solid 0.3vw
+          border-color: #FDFDFD
           background-color: white
           margin-bottom: 0.5vh
         #user-name
@@ -266,8 +266,8 @@ a
         width: 3.2vw
         height: 3.2vw
         border-radius: 50%
-        border: #BBBBBB solid 0.07vw
-        margin-top: 0.5vw
+        border: #CCCCCC solid 0.1vw
+        margin-bottom: 0.5vw
       .vitualimg
         width: 3.2vw
         height: 0
