--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -135,12 +135,14 @@ a
       background-size: contain
       
     .button:hover
-      position: relative
-      transform: scale(1.1) translate(-50%, -50%)
+      //position: relative
+      //transform: scale(1.1) translate(-50%, -50%)
+      opacity: 0.75
       
     #feedback:hover
-      position: relative
-      transform: scale(1.1) translate(-55%, -50%)
+      //position: relative
+      //transform: scale(1.1) translate(-50%, -50%)
+      opacity: 0.75
       
     #feedback
       background-image: url('../file/feedbackicon.png')
@@ -150,6 +152,26 @@ a
     
     a
       cursor: pointer
+    
+    .hover
+      display: none
+      position: absolute
+      transform: translate(-50%, 20%)
+      //top: 1vw
+      background-color: #555555
+      color: white
+      border-radius: 0.4vw
+      //border: solid #888888 0.2vw
+      padding: 0.2vw 0.5vw
+      font-size: 1vw
+      z-index: 2
+      
+    
+    #aboutus-hover
+      transform: translate(-50%, 5%)
+    #feedback-hover
+      transform: translate(-50%, -50%)
+      
       
     #event
       background-image: url('../file/scheduleicon.png')
@@ -162,7 +184,15 @@ a
       width: 1.7vw
       height: 1.7vw
     #profile
-      background-image: url('../file/personalinfoicon.png')
+      /*background-image: url('../file/personalinfoicon.png')
+      width: 2vw
+      height: 2vw
+      background-color: white
+      border-radius: 50%
+      border: solid #888888 0.15vw
+      #userpic
+        width: 100%
+        height: 100%
     #logout
       background-image: url('../file/logouticon.png')
       
