modify some sass

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -33,6 +33,16 @@ a
   text-decoration: none
   color: black
 
+footer
+  height: 2vw
+  background-color: var(--color-main)
+  width: 99.2vw
+  display: flex
+  flex-direction: row
+  justify-content: space-around
+  left: -50%
+  padding-top: 1vw
+
 #phoneerrormsg
   display: none
   position: fixed
@@ -314,7 +324,7 @@ a
   text-align: center
   p
     position: relative
-    //top: 30%
+    top: 30%
     color: #666666
 
 #gotop:hover
@@ -620,7 +630,7 @@ a
         justify-content: flex-start;
         align-items: center;
         height: 20vw
-        overflow: scroll
+        overflow: hidden
         .member
           width: 3vw
           height: 3vw
