--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -223,6 +223,7 @@ a
         align-items: stretch
         
         overflow: scroll
+        overflow-x: hidden
         height: 40vh
         
         z-index: 0
