--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -126,6 +126,8 @@ html
           input#submit-btn(type="submit" value='發佈')
           //p#submit-btn 發佈
     {% endif %}
+    footer
+      {% include "footer.pug" %}
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
