--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -268,7 +268,8 @@ html
             {% endfor %}
 
             // so many cards (use for to solve it after the backend has constructed)
-
+      footer
+        {% include "footer.pug" %}
 
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
