modify lots of things

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -289,7 +289,7 @@ footer
         height: 0
       
   #right-pane
-    background-color: white
+    background-color: #FFE4DC
     width: 73%
     border-radius: 1.5vw
     border: solid 2px #FFCFBF
