--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -67,7 +67,7 @@ html
                 
                 {% if request.user.is_authenticated and request.user.pk == user.user.pk %}
                 //a(href="/logout/") 登出
-                a(href="#") 編輯
+                a(href="{% url 'profile_edit' request.user.userextend.pk %}") 編輯
                 {% else %}
                 input(type="button", value="建立連結")
                 input(type="button", value="傳訊息")
