--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -160,7 +160,7 @@ html
                     p#activity-character.charname 主辦人
                 
                   #activity-comment.comments
-                    {% for comment in activity.comments.all %}
+                    {% for comment in activity.comments.all reversed %}
                     .comment
                       {% load static %}
                       a(href="{% url 'profile' id=comment.author.pk %}")
@@ -214,7 +214,7 @@ html
                     p#projects-character.charname 主辦人
                 
                   #projects-comment.comments
-                    {% for comment in project.comments.all %}
+                    {% for comment in project.comments.all reversed %}
                     .comment
                       {% load static %}
                       a(href="{% url 'profile' id=comment.author.pk %}")
