modify heart login redirect

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -643,10 +643,14 @@ footer
           border: solid 0.2vw #EEEEEE
           
         
-        
+      .login-redirect
+        position: relative
+        transform: translateY(4vw)
+        height: 4vw
+        width: 4vw
           
       #likebutton
-        background-image: url('../file/like-n.png')
+        background-image: url('../file/like-bg-n.png')
         background-repeat: no-repeat
         background-size: contain
         
